mlflow/kubernetes/overlays/stage/mlflow-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  selector:
    app: mlflow-server
  ports:
  - name: mlflow-port
    port: 5000
    protocol: TCP
    targetPort: 5000
