mlflow/kubernetes/overlays/stage/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
